# evidently-concurrent-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
evidently_concurrent_engine/: __init__.py  concurrent.py  engine.py  factory.py  futures_finalization.py
tests/integration/: test_concurrent_engine.py
tests/unit/: test_concurrent_engine.py  test_factory.py  test_timeout_futures_finalization.py
