[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "evidently_concurrent_engine"
version = "0.0.1"
description = ""
authors = [
    {name = "Barkov Mikhail", email = "mik.bar@tutamail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "evidently>=0.4.38",
    'importlib-metadata; python_version>="3.9"',
]

[project.optional-dependencies]
test = [
  "pytest==8.3.4",
]
lint = [
  "ruff==0.9.4", "wemake-python-styleguide==1.0.0",
]
typing = [
  "mypy==1.14.1",
]

[project.urls]
Homepage = "..."

[tool.setuptools.packages.find]
include = ["evidently_concurrent_engine*"]

[tool.ruff]
preview = true
fix = true
target-version = "py39"
line-length = 90
#exclude = ["tests/"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # maccabe
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "ERA",  # flake8-eradicate
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FBT",  # flake8-boolean-trap
  "FLY",  # pyflint
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simpify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "A005",   # allow to shadow stdlib and builtin module names
  "B019",   # allow to use lru_cache
  "COM812", # trailing comma, conflicts with `ruff format`
  # Different doc rules that we don't really care about:
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "ISC001",  # implicit string concat conflicts with `ruff format`
  "ISC003",  # prefer explicit string concat over implicit concat
  "PLR09",   # we have our own complexity rules
  "PLR2004", # do not report magic numbers
  "PLR6301", # do not require classmethod / staticmethod when self not used
  "TRY003",  # long exception messages from `tryceratops`
  "FBT001",  # boolean positional argument
  "FBT002",  # default boolean positional argument
  "EXE002",  # no shebang in executable file
]
external = [ "WPS" ]

flake8-import-conventions.banned-from = [ "ast" ]
flake8-quotes.inline-quotes = "single"
mccabe.max-complexity = 6
pydocstyle.convention = "google"

[tool.mypy]
ignore_missing_imports = true
strict = true
local_partial_types = true
warn_unreachable = true
warn_return_any = false
disallow_subclassing_any = false
mypy_path = "evidently_concurrent_engine"

enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  "possibly-undefined",
  "redundant-self",
  "unimported-reveal",
  "deprecated",
]

[tool.uv.workspace]
members = ["evidently-concurrent-engine"]
